--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-lazy-module",
-  "version": "",
+  "version": "1.0.0",
   "description": "Angular modules grew lazy",
   "keywords": [
     "angular",
