--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-lazy-module",
-  "version": "",
+  "version": "1.0.0",
   "description": "Angular modules grew lazy",
   "homepage": "https://github.com/ex-machine/ng-lazy-module",
   "license": "MIT",
