--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "ng-lazy-module",
   "version": "1.1.0",
   "description": "Angular modules grew lazy",
+  "keywords": [
+    "angular",
+    "module",
+    "lazy",
+    "load"
+  ],
   "homepage": "https://github.com/ex-machine/ng-lazy-module",
   "license": "MIT",
   "main": "ng-lazy-module.js",
