--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 logs
 *.log
 
-# Dependency directory
-# https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
-node_modules
+.idea
+.DS_Store
+Thumbs.db
+
+/node_modules
+/bower_components
+/vendor
