--- a/package.json
+++ b/package.json
@@ -10,23 +10,33 @@
   ],
   "homepage": "https://github.com/ex-machine/ng-lazy-module",
   "license": "MIT",
-  "main": "ng-lazy-module.js",
+  "main": "src/ng-lazy-module.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/ex-machine/ng-lazy-module.git"
+  },
+  "devDependencies": {
+    "del": "^1.2.0",
+    "extend": "^3.0.0",
+    "gulp": "^3.9.0",
+    "gulp-debug": "^2.1.2",
+    "gulp-if": "^1.2.5",
+    "gulp-load-plugins": "^1.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-task-listing": "^1.0.1",
+    "gulp-uglify": "^1.2.0",
+    "mversion": "^1.10.0",
+    "run-sequence": "^1.1.1",
+    "small": "^0.1.1"
+  },
+  "peerDependencies": {
+    "angular": "^1.0"
   },
   "//": [
     "npm run version -- 1.0.0"
   ],
   "scripts": {
-    "build": "uglifyjs ng-lazy-module.js -o ng-lazy-module.min.js --mangle --compress",
     "version": "mversion -n -m %s"
-  },
-  "devDependencies": {
-    "mversion": "^1.10.0",
-    "uglify-js": "^2.4.24"
-  },
-  "peerDependencies": {
-    "angular": "^1.0"
   }
 }
